Add beans handlers swagger definition
